# jax-diffusion-transformer

./: eval_fid.py  pyproject.toml  train_diffusion.py
utils/: checkpoint.py  train_state.py
