[project]
name = "jax-dit"
version = "0.1.0"
description = "Training environment for JAX DiT"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "scikit-learn",
    "jupyter",
    "tqdm",
    "seaborn",
    "Cython<3",
    "numba",
    "opt-einsum",
    "absl-py",
    "termcolor",
    "matplotlib",
    "ml-collections",
    "wandb",
    "imageio",
    "libtmux",
    "threadpoolctl==3.1.0",
    "plotly",
    "tabulate",
    "tensorflow-cpu",
    "tensorflow-probability==0.22.0",
    "tensorflow-datasets",
    "flax==0.7.4",
    "optax==0.1.7",
    "orbax==0.1.9",
    "distrax==0.1.4",
    "chex==0.1.82"
]


[tool.uv.sources]
jax = { url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html" }

[tool.uv.dependencies]
"jax[tpu]" = "==0.4.14"

